tests/snapshots/integration_request_validation__failed_validation_unexpected_null.snap
---
source: tests/integration_request_validation.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="POST /pets failed_validation_unexpected_null" time="0.00">
            <system-out>
[[PROPERTY|correlationId=failed_validation_unexpected_null]]
[[PROPERTY|method=POST]]
[[PROPERTY|operationId=createPets]]
[[PROPERTY|path=/pets]]
[[PROPERTY|requestContentType=application/json]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=201]]
            </system-out>
            <failure type="Request.FailedValidation.UnexpectedNull" message="failure">
[[PROPERTY|correlationId=failed_validation_unexpected_null]]
[[PROPERTY|method=POST]]
[[PROPERTY|operationId=createPets]]
[[PROPERTY|path=/pets]]
[[PROPERTY|requestContentType=application/json]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=201]]

Failure message:
Received null value when null is not allowed at /name/
            </failure>
        </testcase>
    </testsuite>
</testsuites>
