tests/snapshots/integration_request_validation__failed_validation_unexpected_property.snap
---
source: tests/integration_request_validation.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="POST /pets failed_validation_unexpected_property" time="0.00">
            <system-out>
[[PROPERTY|correlationId=failed_validation_unexpected_property]]
[[PROPERTY|method=POST]]
[[PROPERTY|operationId=createPets]]
[[PROPERTY|path=/pets]]
[[PROPERTY|requestContentType=application/json]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=201]]
            </system-out>
            <failure type="Request.FailedValidation.UnexpectedProperty" message="failure">
[[PROPERTY|correlationId=failed_validation_unexpected_property]]
[[PROPERTY|method=POST]]
[[PROPERTY|operationId=createPets]]
[[PROPERTY|path=/pets]]
[[PROPERTY|requestContentType=application/json]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=201]]

Failure message:
Unexpected property at /extra, value "field"
            </failure>
        </testcase>
    </testsuite>
</testsuites>
