tests/snapshots/integration_request_validation__mismatched_content_type_header.snap
---
source: tests/integration_request_validation.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="POST /pets mismatched_content_type_header" time="0.00">
            <system-out>
[[PROPERTY|correlationId=mismatched_content_type_header]]
[[PROPERTY|method=POST]]
[[PROPERTY|operationId=createPets]]
[[PROPERTY|path=/pets]]
[[PROPERTY|requestContentType=text/plain]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=201]]
            </system-out>
            <failure type="Request.MismatchedContentTypeHeader" message="failure">
[[PROPERTY|correlationId=mismatched_content_type_header]]
[[PROPERTY|method=POST]]
[[PROPERTY|operationId=createPets]]
[[PROPERTY|path=/pets]]
[[PROPERTY|requestContentType=text/plain]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=201]]

Failure message:
Spec does not contain matching request for Content-Type: text/plain
            </failure>
        </testcase>
    </testsuite>
</testsuites>
